JK-1396..1400: idle optimize train, latest Kotlin/Groovy pins, follow-ups
Schedule worker AOT train on the engine idle-boundary daemon (ACK is
immediate). Pin optimize fixtures to Kotlin 2.4.10 and Groovy 5.0.8; ship
fixtures via CLI resources; match engine AOT trainer native-access flags;
treat existing kotlinc caches as success; document test-runner AOT skip.